core/scss/prototype.scss
/* ... */
/* Code related
   ========================================================================== */

.br-sample-code {
  position: relative;
}
.br-sample-copy-code-btn {
  position: absolute;
  z-index: 3;
  top: 1rem*$br-rem-multiplier;
  right: 1rem*$br-rem-multiplier;
  display: none;
  .br-sample-code:hover & {
    display: block;
  }
}

.br-sample-markup {
  margin-top: 1rem*$br-rem-multiplier;
  background: $br-code-background;
  border: 1px solid $br-code-border-color;
  padding: 1rem*$br-rem-multiplier;
  .CodeMirror {
    background: transparent;
  }
}

.br-sample-content {
  background: #FFF;
  padding: 3rem*$br-rem-multiplier;
  border: 1px solid $br-sample-border-color;
  margin: 1rem*$br-rem-multiplier 0;
  position: relative;
  overflow-y: hidden;
  overflow-x: scroll;
  resize: both;
}

.br-sample-content-is-layout {
  min-height: 500px;
}

.br-sample-header .br-sample-header-link {
  float: right;
  color: rgba(0,0,0,0.45);
  font-size: 1.6rem*$br-rem-multiplier;
  margin: 1rem*$br-rem-multiplier 0;
  padding: 0 0.2rem*$br-rem-multiplier 0 0;
}

.br-sample-header .br-sample-heading {
  float: left;
  margin: 1rem*$br-rem-multiplier 0;
  padding: 0;
}

/* Color swatches
   ========================================================================== */

.br-color-swatch-list {
  list-style-type: none;
  padding: 0;
}

.br-color-swatch-item {
  display: inline-block;
  margin-right: 1rem*$br-rem-multiplier;
  padding: 1rem*$br-rem-multiplier;
  text-align: center;
}

.br-color-swatch-preview {
  width: 6rem*$br-rem-multiplier;
  height: 6rem*$br-rem-multiplier;
  margin-bottom: 0.5rem*$br-rem-multiplier;
  display: inline-block;
}

.br-color-swatch-data {
  color: #888;
  font-size: 1.3rem*$br-rem-multiplier;
}

/* Typography
   ========================================================================== */

.br-typography-sample-size {
  opacity: 0.4;
}

/* ==========================================================================
  br-bordered-list
   ========================================================================== */

/* ==========================================================================
  Variables
   ========================================================================== */

$br-bordered-list-border-color:                  #DDD !default;
$br-bordered-list-border-color-inverse:          rgba(#FFF,0.2) !default;

// Padding
$br-bordered-list-item-padding:                  0.2rem*$br-rem-multiplier !default;

// Font sizes
$br-bordered-list-font-size:                     1.3rem*$br-rem-multiplier  !default;
$br-bordered-list-title-font-size:               1.5rem*$br-rem-multiplier !default;

// Regular colors

/* Bordered list
   ========================================================================== */

.br-bordered-list-title {
  font-weight: $br-heading-font-weight;
  padding: 0;
  margin: 0 0 1.2rem*$br-rem-multiplier;
  font-size: $br-bordered-list-title-font-size;
  padding: $br-bordered-list-item-padding;
}

.br-tree-dir-title {
  margin: 0;
  font-size: $br-bordered-list-font-size;
  padding: $br-bordered-list-item-padding*2 $br-bordered-list-item-padding;
}

.br-bordered-list {
  margin: 0;
  padding: 0 0 1rem*$br-rem-multiplier;
  ul {
    padding: 0 0 0 1rem*$br-rem-multiplier;
  }
  li {
    display: block;
    a,
    span.br-bordered-list-label {
      padding: $br-bordered-list-item-padding;
      font-size: $br-bordered-list-font-size;
      display: block;
    }
    a {
      text-decoration: none;
      border-bottom: 1px solid $br-bordered-list-border-color;
    }
    a:hover {
      background: rgba(0,0,0,0.1);
    }
    a.br-bordered-list__link--active {
      background: rgba(0,0,0,0.15);
    }
  }
}

/* Improve styles for nav
   ========================================================================== */

.br-bordered-list li a {
  border-bottom: 1px solid $br-default-border-color;
  padding: 0.4rem*$br-rem-multiplier;

  &:hover {
    background-color: $br-default-hover-bg-color;
  }

  &.br-bordered-list__link--active {
    background-color: $br-default-hover-bg-color;
  }
}

.br-styleguide-navigation-holder {
  .br-bordered-list li a {
    border-bottom: 1px solid $br-default-border-color;

    &:hover {
      background-color: #FFF;
    }

    &.br-bordered-list__link--active {
      background-color: #FFF;
    }
  }
}

/* Category markers (on components)
   To use: add “source: unofficial” to YAML front matter in component .md file
   ========================================================================== */

.br-sample-category {
  background: #EEE;
  display: inline-block;
  border-radius: 12px;
  padding: 0.2rem 0.8rem;
  font-size: 90%;
  margin: 0 0 0 1rem;
  position: relative;
  top: 0.7rem;
}

/* Category markers (in sidebar)
   Use case: determine which “official” components contain custom code
   To use: add containsCustom: true to YAML front matter in _docs.md file on component level
   ========================================================================== */

.br-docs-category-marker-custom {
  background: #CCC;
  width: 8px;
  height: 8px;
  border-radius: 100%;
  float: right;
  margin-top: 4px;
}

/* ==========================================================================
  Grid layout
   ========================================================================== */

.br-styleguide-navigation-holder {
  border-right: 1px solid $br-default-border-color;
  background: $br-styleguide-sidebar-bg-color;
  @media (min-width: $br-switch-breakpoint) {
    overflow: auto;
  }
}

.br-styleguide-header {
  display: flex;
  justify-content: space-between;
  padding: 1.5rem;
  background: $br-styleguide-sidebar-bg-color;
  border-right: 1px solid $br-default-border-color;
}

.br-styleguide-navigation-holder {
  position: sticky;
  top: 0;
  z-index: 9;
}
/* ... */

